navbar gap fixed

--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,3 @@ body{
 	background-image: url("assets/4.jpg");
 }
 
-.container{
-	width: 100%;
-	padding: 0px;
-}
