--- a/src/reset.css
+++ b/src/reset.css
@@ -42,3 +42,11 @@ q:before,q:after {
 }
 abbr,acronym { border:0;
 }
+
+.container{
+    width: 100%;
+    padding: 0px;
+}
+.row{
+    margin: 0px;
+}
